2008-08-11  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-monitor.c: (tracker_monitor_init),
	(monitor_event_cb): Improve the last commit so we use the _CHANGED
	event for FAM only because it is dumb and doesn't allow GIO to
	signal _CHANGES_DONE.

2008-08-11  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-monitor.c: (monitor_event_cb): Don't signal
	files to be reindexed on the _CHANGED event. Only on CHANGES_DONE
	which is for WRITE_CLOSE events.

2008-08-08  Martyn Russell  <martyn@imendio.com>

	* src/libstemmer/Makefile.am: 
	* src/trackerd/Makefile.am:
	* src/tracker-indexer/Makefile.am: 
	* tests/libtracker-common/Makefile.am: Renamed .la to just
	libstemmer from libstemmer-private. 

	* src/libtracker-common/Makefile.am: Added libstemmer to the .la
	files we need so the tests don't fail to build.
 	
	* src/libtracker-common/tracker-language.c: Fixed include path for
	libstemmer. 
	
	* src/libtracker-common/tracker-utils.[ch]: 
	* src/trackerd/tracker-crawler.c:
	* src/tracker-indexer/tracker-indexer.c: Added throttle function
	we use in the indexer to a common place for the daemon to use too.

	* src/trackerd/tracker-main.c: Add the throttle value to the
	sanity check for variables.

2008-08-08  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (process_func): Make sure we
	pause the crawling too when the user manually pauses.

2008-08-08  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: (file_enumerate_next_cb),
	(file_enumerate_next): Now we get 100 files at a time from GIO
	instead of 1 at a time. This should reduce overheads when crawling
	the file system. Performance seems to be slightly better now too
	especially with the ioprio calls.

2008-08-08  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/Makefile.am:
	* src/libtracker-common/tracker-ioprio.[ch]:
	* src/tracker-indexer/Makefile.am:
	* src/tracker-indexer/tracker-ioprio.[ch]: