@@ -38,10 +38,14 @@ get_mock_tracker_db_result (gint results, gint columns, gboolean set_null) {
                 for (j = 0; j < columns; j++) {
 
                         GValue value = {0,};
+			gchar * text = g_strdup_printf ("value %d", i);
 
                         g_value_init (&value, G_TYPE_STRING);
-                        g_value_set_string (&value, (set_null ? NULL : g_strdup_printf ("value %d", i)));
+                        g_value_set_string (&value, (set_null ? NULL : text));
                         _tracker_db_result_set_set_value (mock, j, &value);
+
+			g_value_unset (&value);
+			g_free (text);
                 }
         }
 
@@ -81,7 +85,7 @@ test_dbus_query_result_to_strv ()
                 result = tracker_dbus_query_result_to_strv (result_set, 0, &count);
         }
         g_test_trap_assert_failed ();
-        // Should raise g_critical (priv->array...);
+        /* Should raise g_critical (priv->array...); */
 
         g_object_unref (result_set);
 
@@ -105,10 +109,51 @@ test_dbus_query_result_to_hash_table ()
 }
 
 static void
+free_string_ptr_array (GPtrArray *array)
+{
+	g_ptr_array_foreach (array, (GFunc)g_strfreev, NULL);
+	g_ptr_array_free (array, TRUE);
+}
+
+static void
 test_dbus_query_result_to_ptr_array ()
 {
-        /* TODO: Implement */
-        g_print ("- Unimplemented -\n");
+        TrackerDBResultSet *result_set = NULL;
+        GPtrArray *result = NULL;
+        gint       count;
+
+        /* NULL */
+        result = tracker_dbus_query_result_to_ptr_array (result_set);
+        g_assert_cmpint (result->len, ==, 0);
+	free_string_ptr_array (result);
+	
+        /* 5 results, 1 column */
+        result_set = get_mock_tracker_db_result (5, 1, FALSE);
+        result = tracker_dbus_query_result_to_ptr_array (result_set);
+
+        g_assert_cmpint (result->len, ==, 5);
+	free_string_ptr_array (result);
+
+        g_object_unref (result_set);
+
+	/* 0 results, 1 columns */
+        result_set = get_mock_tracker_db_result (0, 1, FALSE);
+        if (g_test_trap_fork (0, G_TEST_TRAP_SILENCE_STDERR)) {
+                result = tracker_dbus_query_result_to_ptr_array (result_set);
+		free_string_ptr_array (result);
+        }
+        g_test_trap_assert_failed ();
+        /* Should raise g_critical (priv->array...); */
+	
+        g_object_unref (result_set);
+        
+	/*  1 result ... NULL */
+        result_set = get_mock_tracker_db_result (1, 1, TRUE);
+        result = tracker_dbus_query_result_to_ptr_array (result_set);
+        g_assert_cmpint (result->len, ==, 1);
+	free_string_ptr_array (result);
+
+        g_object_unref (result_set);
 }
 
 gint
