@@ -1,3 +1,11 @@
+2008-08-11  Ivan Frade  <ivan.frade@nokia.com>
+
+	* src/libtracker-db/tracker-db-dbus.c
+	(tracker_dbus_query_result_to_ptr_array): Fixed memory leak and
+	handle NULL content in a column.
+	* tests/libtracker-db/tracker-db-dbus-test.c: Added tests for
+	tracker_dbus_query_result_to_ptr_array
+	
 2008-08-11  Martyn Russell  <martyn@imendio.com>
 
 	* src/trackerd/tracker-monitor.c: (tracker_monitor_init),
